--- a/background.html
+++ b/background.html
@@ -6,8 +6,8 @@
 <script src="js/utils.js" type="text/javascript"></script>
 <script src="js/stock_data.js" type="text/javascript"></script>
 <script src="js/setting.js" type="text/javascript"></script>
-<script src="js/symbol_subscription.js" type="text/javascript"></script>
 <script src="js/quoter.js" type="text/javascript"></script>
+<script src="js/back/symbol_subscription.js" type="text/javascript"></script>
 <script src="js/back/background.js" type="text/javascript"></script>
 <script>
 $(document).ready(function(){
@@ -16,7 +16,7 @@ $(document).ready(function(){
 });
 </script>
 </head>
-<body>
+<body onunload="bg.cleanup()">
   <!--canvas id="canvas" width="19" height="19"></canvas>
   <img id="icon_img_blank" src="images/icon_19_blank.png" alt="icon" />
   <img id="icon_img_default" src='images/icon_19_default.png' alt='icon' /-->
