--- a/background.html
+++ b/background.html
@@ -5,8 +5,10 @@
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script src="js/utils.js" type="text/javascript"></script>
 <script src="js/stock_data.js" type="text/javascript"></script>
+<script src="js/stock_data_manager.js" type="text/javascript"></script>
 <script src="js/setting.js" type="text/javascript"></script>
 <script src="js/quoter.js" type="text/javascript"></script>
+<script src="js/symbol_list.js" type="text/javascript"></script>
 <script src="js/back/symbol_subscription.js" type="text/javascript"></script>
 <script src="js/back/background.js" type="text/javascript"></script>
 <script>
