--- a/background.html
+++ b/background.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<!--script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript"></script-->
-<script src="http://code.jquery.com/jquery-latest.js"></script>
+<!--script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<script src="http://code.jquery.com/jquery-latest.js"></script-->
 <script src="js/utils.js" type="text/javascript"></script>
 <script src="js/stock_data.js" type="text/javascript"></script>
 <script src="js/stock_data_manager.js" type="text/javascript"></script>
