--- a/background.html
+++ b/background.html
@@ -1,15 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<!--script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-<script src="http://code.jquery.com/jquery-latest.js"></script-->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<!--script src="http://code.jquery.com/jquery-latest.js"></script-->
 <script src="js/utils.js" type="text/javascript"></script>
 <script src="js/stock_data.js" type="text/javascript"></script>
 <script src="js/stock_data_manager.js" type="text/javascript"></script>
 <script src="js/setting.js" type="text/javascript"></script>
 <script src="js/quoter.js" type="text/javascript"></script>
 <script src="js/symbol_list.js" type="text/javascript"></script>
-<script src="js/back/symbol_subscription.js" type="text/javascript"></script>
 <script src="js/back/background.js" type="text/javascript"></script>
 <script>
 $(document).ready(function(){
